// protoc --cpp_out=../../kuplung/utilities/saveopen/ KuplungDefinitions.proto 

syntax = "proto2";

package KuplungApp;

message Vec2 {
  required float x = 1;
  required float y = 2;
}

message Vec3 {
  required float x = 1;
  required float y = 2;
  required float z = 3;
}

message Vec4 {
  required float x = 1;
  required float y = 2;
  required float z = 3;
  required float w = 4;
}

message ObjectCoordinate {
  required bool animate = 1;
  required float point = 2;
}

message MaterialColor {
    required bool colorPickerOpen = 1;
    required bool animate = 2;
    required float strength = 3;
    required Vec3 color = 4;
}

//message FloatMatrix {
//  required uint32 rows = 1;
//  required uint32 cols = 2;
//  repeated float data = 3 [packed = true];
//}